--- a/package.json
+++ b/package.json
@@ -4,5 +4,8 @@
     "postcss": "^8.4.38",
     "prisma": "^5.11.0",
     "tailwindcss": "^3.4.1"
+  },
+  "dependencies": {
+    "react-icons": "^5.0.1"
   }
 }
