--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 #aaa
-DATABASE_URL="mongodb+srv://happylearners:happylearners@cluster0.blyrqee.mongodb.net/test"
+DATABASE_URL="mongodb+srv://happylearn:happylearn@atlascluster.f4e04t4.mongodb.net/test"
