--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.38",
     "prisma": "^5.11.0",
     "tailwindcss": "^3.4.1"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.11.0",
+    "bcrypt": "^5.1.1",
+    "next-auth": "^4.24.7",
     "react-icons": "^5.0.1"
   }
 }
