--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@prisma/client": "^5.11.0",
     "bcrypt": "^5.1.1",
     "next-auth": "^4.24.7",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1"
   }
 }
